--- a/.gitignore
+++ b/.gitignore
@@ -91,6 +91,8 @@ out
 .nuxt
 dist
 
+package-lock.json
+
 # Gatsby files
 .cache/
 # Comment in the public line in if your project uses Gatsby and not Next.js
