--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
+  },
+  "nodemonConfig": {
+    "ignore": ["./DATA/"],
+    "delay": "2"
   }
 }
