--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
@@ -29,7 +30,9 @@
     "typescript": "^5.6.2"
   },
   "nodemonConfig": {
-    "ignore": ["./DATA/"],
+    "ignore": [
+      "./DATA/"
+    ],
     "delay": "2"
   }
 }
