--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/node": "^22.7.3",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui": "^3.52.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
