--- a/.TEMP.env
+++ b/.TEMP.env
@@ -1,4 +1,7 @@
-PORT=5555
+DEV_PORT=5555
+PROD_PORT=5556
 _HASH_ROUNDS=10
 PK="WSH"
 EXPIRES_IN=600
+MONGODB_URL_DEV="mongodb+srv://user1:abc-123@dev.qad7o.mongodb.net/Test?retryWrites=true&w=majority&appName=Dev"
+MONGODB_URL_PROD="mongodb+srv://root:abc-123@dev.qad7o.mongodb.net/Prod?retryWrites=true&w=majority&appName=Dev"
