--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "SET NODE_ENV=dev&nodemon src/app.ts",
-    "test": "npm run jest",
+    "test": "jest --coverage",
     "prod": "NODE_ENV=prod node dist/app.js"
   },
   "dependencies": {
@@ -23,13 +23,18 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/mongoose": "^5.11.96",
-    "@types/node": "^22.7.3",
+    "@types/node": "^22.9.0",
+    "@types/supertest": "^6.0.2",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui": "^3.52.4",
     "@types/swagger-ui-express": "^4.1.6",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.7",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   },
