--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "cross-env NODE_ENV=dev nodemon src/app.ts",
-    "test": "cross-env NODE_ENV=dev jest --coverage",
+    "test": "cross-env NODE_ENV=dev jest --coverage --verbose --detectOpenHandles",
     "prod": "cross-env NODE_ENV=prod node dist/app.js"
   },
   "dependencies": {
