--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "cross-env NODE_ENV=dev nodemon src/app.ts",
-    "test": "cross-env NODE_ENV=dev jest --coverage --verbose --detectOpenHandles --testTimeout=10000",
+    "test": "cross-env NODE_ENV=dev mocha --check-leaks -r tsconfig-paths/register -r ts-node/register",
     "prod": "cross-env NODE_ENV=prod node dist/app.js"
   },
   "dependencies": {
@@ -14,6 +14,7 @@
     "express": "^4.21.0",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
+    "mocha": "^10.8.2",
     "mongoose": "^7.0.3",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
@@ -23,8 +24,8 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.0",
-    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/mocha": "^10.0.9",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^22.9.0",
     "@types/supertest": "^6.0.2",
@@ -32,10 +33,8 @@
     "@types/swagger-ui": "^3.52.4",
     "@types/swagger-ui-express": "^4.1.6",
     "cross-env": "^7.0.3",
-    "jest": "^29.7.0",
     "nodemon": "^3.1.7",
     "supertest": "^7.0.0",
-    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   },
