--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "scripts": {
     "build": "tsc",
     "dev": "cross-env NODE_ENV=dev nodemon src/app.ts",
-    "test": "cross-env NODE_ENV=dev mocha --check-leaks -r tsconfig-paths/register -r ts-node/register",
+    "test": "cross-env NODE_ENV=dev mocha --check-leaks -r ts-node/register 'src/test/**/*.test.ts' --timeout 15000",
     "prod": "cross-env NODE_ENV=prod node dist/app.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "chai": "^5.1.2",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "http-status-codes": "^2.3.0",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/chai": "^5.0.1",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
