--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "tsc",
     "dev": "cross-env NODE_ENV=dev nodemon src/app.ts",
-    "test": "cross-env NODE_ENV=dev mocha --check-leaks -r ts-node/register 'src/test/**/*.test.ts' --timeout 15000",
+    "test": "cross-env NODE_ENV=dev mocha --check-leaks -r ts-node/register 'src/test/**/*.test.ts'",
     "prod": "cross-env NODE_ENV=prod node dist/app.js"
   },
   "dependencies": {
