test -> http / dev&prod -> https

--- a/.test.env
+++ b/.test.env
@@ -3,4 +3,4 @@ _HASH_ROUNDS=10
 PK="WSH"
 EXPIRES_IN=6000
 MONGODB_URL="mongodb+srv://user1:abc-123@dev.qad7o.mongodb.net/Test?retryWrites=true&w=majority&appName=Dev"
-HTTPS=true
+HTTPS=
