--- a/.prod.env
+++ b/.prod.env
@@ -3,3 +3,4 @@ _HASH_ROUNDS=10
 PK="WSH"
 EXPIRES_IN=6000
 MONGODB_URL="mongodb+srv://root:abc-123@dev.qad7o.mongodb.net/Prod?retryWrites=true&w=majority&appName=Dev"
+HTTPS=true
